# linux-find-clone

./: .gitignore  CMakeLists.txt  Makefile  action.c  action.h  action_ls.c  action_ls.h  action_name.c  action_name.h  action_nouser.c  action_nouser.h  action_path.c  action_path.h  action_type.c  action_type.h  action_user.c  action_user.h  debug  doxygen.dcf  hello  main.c  myfind  myfind-grp11  notes.txt  readme.md
test/: troll
test/another_level/: hell.txt
